@@ -1,3 +1,8 @@
+2001-01-24  Alexandre Oliva  <aoliva@redhat.com>
+
+	* ltcf-gcj.sh (lt_simple_link_test_code): Remove stray `(0)'.
+	* libtool.m4 (_AC_LIBTOOL_GCJ): Pass $CPPFLAGS on.
+
 2000-11-07  Philip Blundell  <pb@futuretv.com>
 
 	* Makefile.in (ETC_SUPPORT): Also add configbuild.* and configdev.*.
